# MyCS2610

Activity_Tracker/: pyproject.toml
Activity_Tracker/Tracker/: db.sqlite3  manage.py
Activity_Tracker/Tracker/Act_Tracker/: apps.py  models.py  urls.py  views.py
Activity_Tracker/Tracker/Tracker/: settings.py  urls.py
Assn1/: README.md  encoder.py  request.py  response.py  router.py  server.py
Assn1/static/: code.js  styles.css
Assn1/templates/: about.html  experience.html  index.html  projects.html
TODOS/: pyproject.toml
TODOS/TODOS/: db.sqlite3  manage.py
TODOS/TODOS/TODOS/: asgi.py  settings.py  urls.py  wsgi.py
TODOS/TODOS/TODOS_App/: apps.py  models.py  urls.py  views.py
counter/counter/: package-lock.json
counter/counter/src/: Counter.jsx  index.css  main.jsx
destinations/: pyproject.toml
destinations/destinations/: db.sqlite3  manage.py
destinations/destinations/core/: middleware.py  models.py  urls.py  views.py
django_example/: pyproject.toml
finalproj/: README.md
passwordgen/: pyproject.toml
passwordgen/passwordgen/: manage.py
passwordgen/passwordgen/passwordgen/: asgi.py  settings.py  urls.py  wsgi.py
passwordgen/passwordgen/passwordgenerator/: urls.py  views.py
passwordgen/passwordgen/passwordgenerator/static/passwordgenerator/: styles.css
passwordgen/passwordgen/passwordgenerator/templates/passwordgenerator/: index.html  passwords.html
poetry-demo/: pyproject.toml
poetry-demo/src/: test.py
typing_tutor/typing_tutor/: README.md  index.html  package-lock.json  package.json
typing_tutor/typing_tutor/src/: key.jsx  (+4 more)
(+26 files in other folders)
